[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.poetry]
name = "dsa"
version = "0.1.0"
description = ""
authors = ["Akshay Priyadarshi <akshayp1904@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
